--- a/rpg/pom.xml
+++ b/rpg/pom.xml
@@ -8,6 +8,11 @@
   <name>rpg</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <maven.compiler.source>1.12</maven.compiler.source>
+    <maven.compiler.target>1.12</maven.compiler.target>
+  </properties>
+
   <repositories>
     <repository>
 			<id>spigot-repo</id>
